[package]
name = "qubit-lock"
version = "0.3.1"
edition = "2024"
rust-version = "1.94"
authors = ["Haixing Hu <starfish.hu@gmail.com>"]
license = "Apache-2.0"
repository = "https://github.com/qubit-ltd/rs-lock"
description = "Lock utilities library providing synchronous, asynchronous, and monitor-based locking primitives"
homepage = "https://github.com/qubit-ltd/rs-lock"
documentation = "https://docs.rs/qubit-lock"
readme = "README.md"
keywords = ["lock", "mutex", "rwlock", "monitor", "async"]
categories = ["concurrency", "asynchronous"]
exclude = [
    "coverage.sh",
    ".circleci/*",
    "align-ci.sh",
    "ci-check.sh",
]

[lib]
name = "qubit_lock"
doctest = true

[dependencies]
tokio = { version = "1.5", default-features = false, features = ["sync"] }
parking_lot = "0.12"

[dev-dependencies]
tokio = { version = "1.5", default-features = false, features = ["macros", "rt-multi-thread", "time"] }
