[package]
name = "qubit-lock"
version = "0.7.0"
edition = "2024"
rust-version = "1.94"
authors = ["Haixing Hu <starfish.hu@gmail.com>"]
license = "Apache-2.0"
repository = "https://github.com/qubit-ltd/rs-lock"
description = "Lock utilities library providing synchronous, asynchronous, and monitor-based locking primitives"
homepage = "https://github.com/qubit-ltd/rs-lock"
documentation = "https://docs.rs/qubit-lock"
readme = "README.md"
keywords = ["lock", "mutex", "rwlock", "monitor", "async"]
categories = ["concurrency", "asynchronous"]
exclude = [
    "align-ci.sh",
    "ci-check.sh",
    "coverage.sh",
    "style-check.sh",
    "update-submodule.sh",
    ".github/*",
    ".rs-ci/**",
    ".llvm-cov.toml",
    ".cargo-audit.toml.example",
]

[lib]
name = "qubit_lock"
doctest = true

[features]
default = ["async"]
async = ["dep:tokio"]

[dependencies]
parking_lot = "0.12"
tokio = { version = "1.52", default-features = false, features = ["sync"], optional = true }

[dev-dependencies]
semver = { version = "1.0", default-features = false }
tokio = { version = "1.52", default-features = false, features = ["macros", "rt-multi-thread", "time"] }
