[package]
name = "qubit-lock"
version = "0.9.0"
edition = "2024"
rust-version = "1.94"
authors = ["Haixing Hu <starfish.hu@gmail.com>"]
license = "Apache-2.0"
repository = "https://github.com/qubit-ltd/rs-lock"
description = "Lock utilities library providing synchronous, asynchronous, and monitor-based locking primitives"
homepage = "https://github.com/qubit-ltd/rs-lock"
documentation = "https://docs.rs/qubit-lock"
readme = "README.md"
keywords = ["lock", "mutex", "rwlock", "monitor", "async"]
categories = ["concurrency", "asynchronous"]
include = [
    "/Cargo.toml",
    "/LICENSE",
    "/README.md",
    "/README.zh_CN.md",
    "/RUST_CODING_STYLE.md",
    "/RUST_CODING_STYLE.zh_CN.md",
    "/doc/**/user_guide*.md",
    "/examples/**",
    "/resources/**",
    "/src/**",
    "/tests/**",
]

[lib]
name = "qubit_lock"
doctest = true

[features]
default = ["async"]
async = ["dep:tokio"]

[dependencies]
parking_lot = "0.12"
tokio = { version = "1.52", default-features = false, features = ["sync", "time"], optional = true }

[dev-dependencies]
semver = { version = "1.0", default-features = false }
tokio = { version = "1.52", default-features = false, features = ["macros", "rt-multi-thread", "time"] }
